add syntax hightligher

--- a/src/main/resources/META-INF/plugin.xml
+++ b/src/main/resources/META-INF/plugin.xml
@@ -14,6 +14,9 @@
                   fieldName="INSTANCE" language="ZigLang" extensions="ziglang"/>
         <lang.parserDefinition language="ZigLang"
                                implementationClass="org.ziglang.ZigParserDefinition"/>
+        <lang.syntaxHighlighterFactory
+                language="ZigLang"
+                implementationClass="org.ziglang.ZigLangSyntaxHighlighterFactory"/>
     </extensions>
 
     <applicationListeners>
