code completion for pub works in ide

--- a/src/main/resources/META-INF/plugin.xml
+++ b/src/main/resources/META-INF/plugin.xml
@@ -17,6 +17,8 @@
         <lang.syntaxHighlighterFactory
                 language="ZigLang"
                 implementationClass="org.ziglang.ZigLangSyntaxHighlighterFactory"/>
+        <completion.contributor language="ZigLang"
+                                implementationClass="org.ziglang.ZigLangCompletionContributor"/>
     </extensions>
 
     <applicationListeners>
