--- a/gradle.properties
+++ b/gradle.properties
@@ -1,9 +1,9 @@
 # IntelliJ Platform Artifacts Repositories
 # -> https://plugins.jetbrains.com/docs/intellij/intellij-artifacts.html
 
-pluginGroup = org.jetbrains.plugins.template
-pluginName = IntelliJ Platform Plugin Template
-pluginVersion = 0.9.0
+pluginGroup = org.ziglang
+pluginName = IntelliJ ZigLang Plugin
+pluginVersion = 0.1.0
 
 # See https://plugins.jetbrains.com/docs/intellij/build-number-ranges.html
 # for insight into build numbers and IntelliJ Platform versions.
