--- a/src/main/resources/META-INF/plugin.xml
+++ b/src/main/resources/META-INF/plugin.xml
@@ -1,15 +1,11 @@
 <idea-plugin>
     <id>org.ziglang</id>
     <name>ZigLang</name>
-    <vendor>ZigLang</vendor>
+    <vendor>intellij-zig</vendor>
 
-    <!-- Product and plugin compatibility requirements -->
-    <!-- https://plugins.jetbrains.com/docs/intellij/plugin-compatibility.html -->
-    <depends>com.intellij.modules.platform</depends>
+    <depends>com.intellij.modules.lang</depends>
 
     <extensions defaultExtensionNs="com.intellij">
-        <applicationService serviceImplementation="org.ziglang.template.services.MyApplicationService"/>
-        <projectService serviceImplementation="org.ziglang.template.services.MyProjectService"/>
         <fileType name="ZigLang" implementationClass="org.ziglang.ZigFileType"
                   fieldName="INSTANCE" language="ZigLang" extensions="zig"/>
         <lang.parserDefinition language="ZigLang"
@@ -24,9 +20,4 @@
         <configurationType implementation="org.ziglang.runner.ZigRunnerConfigType"/>
 
     </extensions>
-
-    <applicationListeners>
-        <listener class="org.ziglang.template.listeners.MyProjectManagerListener"
-                  topic="com.intellij.openapi.project.ProjectManagerListener"/>
-    </applicationListeners>
 </idea-plugin>
